--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
+<head>
+    <title>JavaScript & jQuery - Chapter 5: Document Object Model - Add Element</title>
     <link rel="stylesheet" href="css/c05.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/add-element.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <div id="page">
-      <h1 id="header">List</h1>
-      <h2>Buy groceries</h2>
-      <ul id="todo">
-        <li id="one" class="hot"><em>fresh</em> figs</li>
-        <li id="two" class="hot">pine nuts</li>
-        <li id="three" class="hot">honey</li>
-        <li id="four">balsamic vinegar</li>
-    </ul>
+        <h1 id="header">List</h1>
+        <h2>Buy groceries</h2>
+        <ul id="todo">
+            <li id="one" class="hot"><em>fresh</em> figs</li>
+            <li id="two" class="hot">pine nuts</li>
+            <li id="three" class="hot">honey</li>
+            <li id="four">balsamic vinegar</li>
+        </ul>
     </div>
     <input type="text" id="items">
-    <button id="brnAddElement"oneClick="addItem()">
+    <button id="btnAddElement" onclick="addItem()">
         Add new item
     </button>
-   
-</div>
-  </body>
+</body>
 </html>
