--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
     <title>JavaScript & jQuery - Chapter 5: Document Object Model - Add Element</title>
-    <link rel="stylesheet" href="css/c05.css" />
+    <link rel="stylesheet" href="css/c05.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/add-element.js"></script>
 </head>
